switch for env.js to tc-electron-env

--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
-    "checking-tool-wrapper": "4.0.3",
+    "checking-tool-wrapper": "4.0.4-beta.10",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -168,6 +168,7 @@
     "tc-source-content-updater": "0.6.18",
     "tc-strings": "0.1.7",
     "tc-tool": "4.0.1",
+    "tc-electron-env": "0.9.0-beta.10",
     "tc-ui-toolkit": "1.0.1",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.15",
