--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "electron-start": "electron .",
     "electron-build": "electron-packager ./build --out=dist",
     "react-start": "craco start",
-    "react-build": "craco build --max-old-space-size=4096",
+    "react-build": "craco build NODE_OPTIONS=--max-old-space-size=8192",
     "build-main": "webpack --config electron/webpack.config.js",
     "remove-build-folders": "rm -rf dist && rm -rf build",
     "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
@@ -75,6 +75,7 @@
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "concurrently": "5.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "copyfiles": "2.2.0",
     "cross-env": "7.0.2",
     "css-loader": "3.4.2",
@@ -87,6 +88,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "3.1.2",
     "fetch-mock": "5.13.1",
+    "file-loader": "^6.0.0",
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
