--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
+    "tc-electron-env": "^0.9.0",
     "tc-source-content-updater": "0.6.18",
     "tc-strings": "0.1.7",
     "tc-tool": "4.0.0",
