--- a/package.json
+++ b/package.json
@@ -71,11 +71,11 @@
     "@types/node": "13.7.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
-    "babel-loader": "8.0.6",
+    "babel-loader": "8.1.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "concurrently": "5.1.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "5.1.1",
     "copyfiles": "2.2.0",
     "cross-env": "7.0.2",
     "css-loader": "3.4.2",
@@ -85,10 +85,10 @@
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
     "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-prettier": "3.1.2",
     "fetch-mock": "5.13.1",
-    "file-loader": "^6.0.0",
+    "file-loader": "6.0.0",
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
@@ -103,12 +103,12 @@
     "request-promise": "4.2.2",
     "source-map-explorer": "2.2.2",
     "spec-xunit-file": "0.0.1-3",
-    "style-loader": "^1.1.3",
+    "style-loader": "1.1.3",
     "taffydb": "2.7.3",
     "temp": "0.8.3",
     "typescript": "3.7.5",
     "wait-on": "4.0.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "3.3.11",
     "yargs": "10.0.3"
   },
   "dependencies": {
@@ -153,7 +153,7 @@
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.1",
     "react-select": "1.2.0",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
