--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,8 @@ jobs:
         id: build
         run: |
           echo "Building $APP_VERSION-$HASH"
-          ./node_modules/.bin/gulp build --linux
+          npm run build
+          # ./node_modules/.bin/gulp build --linux
           ./node_modules/.bin/gulp release-linux-deb --out=../artifacts/$ARTIFACT_NAME
 
       - uses: actions/upload-artifact@v1
@@ -188,7 +189,8 @@ jobs:
       - name: build windows
         run: |
           echo "Building $APP_VERSION-$HASH"
-          ./node_modules/.bin/gulp build --win
+          npm run build-win
+          # ./node_modules/.bin/gulp build --win
 #     x64
       - name: Set x64 artifact name
         run: echo "::set-env name=ARTIFACT_X64::$(echo "${{ env.APP_NAME }}-win-x64-${{ env.APP_VERSION }}-${{ env.HASH }}.exe")"
@@ -286,7 +288,8 @@ jobs:
         id: build
         run: |
           echo "Building $APP_VERSION-$HASH"
-          ./node_modules/.bin/gulp build --macos
+          npm run build
+          # ./node_modules/.bin/gulp build --macos
 
       - name: bundle macOS
         run: ./node_modules/.bin/gulp release-macos --out=../artifacts/$ARTIFACT_NAME
