--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "main": "main.js",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "build": "npm run remove-build-folders && npm run react-build && npm run build-main && copyfiles package.json build/ && npm run electron-build",
+    "prebuild": "npm run remove-build-folders && npm run react-build && npm run build-main && copyfiles package.json build/",
+    "build": "npm run electron-build",
+    "build-win": "npm run prebuild && npm run electron-build-win",
     "electron-start": "electron .",
     "electron-build": "electron-packager ./build --out=dist",
+    "electron-build-win": "electron-packager ./build --out=dist --arch=all",
     "react-start": "craco start",
     "react-build": "craco build NODE_OPTIONS=--max-old-space-size=8192",
     "build-main": "webpack --config electron/webpack.config.js",
