--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
+    "babel-polyfill": "6.26.0",
     "checking-tool-wrapper": "4.0.4",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
