--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "React App Electron Template",
+  "short_name": "translationCore",
+  "name": "translationCore",
   "icons": [
     {
       "src": "favicon.ico",
