Attempting to add icon to dist file

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "npm run electron-build",
     "build-win": "npm run prebuild && npm run electron-build-win",
     "electron-start": "electron .",
-    "electron-build": "electron-packager ./build --out=dist",
-    "electron-build-win": "electron-packager ./build --out=dist --arch=all",
+    "electron-build": "electron-packager ./build --out=dist --icon=src/images/icon.icns",
+    "electron-build-win": "electron-packager ./build --out=dist --arch=all --icon=src/images/icon.ico",
     "react-start": "craco start",
     "react-build": "craco build",
     "build-main": "webpack --config electron/webpack.config.js",
