--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-win": "npm run prebuild && npm run electron-build-win",
     "electron-start": "electron .",
     "electron-build": "electron-packager ./build --out=dist --icon=src/images/icon.icns",
-    "electron-build-win": "electron-packager ./build --out=dist --all --icon=src/images/icon.ico",
+    "electron-build-win": "electron-packager ./build --out=dist --arch=x64 --icon=src/images/icon.ico",
     "react-start": "craco start",
     "react-build": "craco build",
     "build-main": "webpack --config electron/webpack.config.js",
