--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-win": "npm run prebuild && npm run electron-build-win",
     "electron-start": "electron .",
     "electron-build": "electron-packager ./build --out=dist --icon=src/images/icon.icns",
-    "electron-build-win": "electron-packager ./build --out=dist --arch=x64 --icon=src/images/icon.ico",
+    "electron-build-win": "electron-packager ./build --out=dist --arch=all --icon=src/images/icon.ico",
     "react-start": "craco start",
     "react-build": "craco build",
     "build-main": "webpack --config electron/webpack.config.js",
@@ -132,6 +132,7 @@
     "deep-freeze": "0.0.1",
     "dotenv": "6.2.0",
     "enzyme-to-json": "3.3.5",
+    "eslint-plugin-import": "2.20.2",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
     "gogs-client": "0.5.2",
