Added back build process (#6783)
* Added back prettier

* Removed carets

* Removed unnecesary file

* Fixed

* Maded necessary changes to get to part with build changes made by joel

* Removed commented code

* Removed caret

* Got paths working correctly w/ webpack bundled code

* package-lock.json

* Moved MenuTemplate/MenuBar to electron folder

* Removed commented template code

* Fixed bug with logger file

* Rolled back

* Removed logger from electron-main

* Removed console logs

* Upgraded react-scripts and removed cartes

* Fixed eslint warnings on gulpfile.js

* Removed console logs

* Added back comments

* updated tools

* Removed unnecessary logging

* Increased max-old-space-size memory size

* Removed unused modules from  src/index.js

* Tool

* Updating Build process

* gulpfile.js

* Fixing .gitmodules, maybe?

* Updated gulpfile.js

* Added github actions to pull request made aginst sandbox branches

* Added missing module: babel-polyfill

* Fixing max-old-space-size on react-build script

* Fixing max-old-space-size on react-build script

* 8192

* Fixed problem with memory for npm scripts

* Fixed eslint error in LocaleActions.js

* Fixed app name

* Attempting to add icon to dist file

* Turned off import/first

* Fixing eslint errors on windows

* fixing eslint issues

* Fixed flag for all arch for win builds

* Testing build-win

* Attempt to fix windoes builds

* Removed eslint config from package.json

* Updated package-lock.json

* src/js/localStorage/index.js

* .eslintrc.js

* .eslintrc.js

* eslint import/order

* Fixed eslint errors

* Removed unused eslint-plugin-import

* Updated main worflow

* Commented out devtool

* Clean up

* Removed TODOS from gulpfile.js

* Added latest commit hash for tools' sandbox-electronite branches

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ on:
       - master
       - develop
       - release-*
+      - sandbox-*
 
 jobs:
   test:
@@ -121,7 +122,7 @@ jobs:
         id: build
         run: |
           echo "Building $APP_VERSION-$HASH"
-          ./node_modules/.bin/gulp build --linux
+          npm run build
           ./node_modules/.bin/gulp release-linux-deb --out=../artifacts/$ARTIFACT_NAME
 
       - uses: actions/upload-artifact@v1
@@ -188,7 +189,7 @@ jobs:
       - name: build windows
         run: |
           echo "Building $APP_VERSION-$HASH"
-          ./node_modules/.bin/gulp build --win
+          npm run build-win
 #     x64
       - name: Set x64 artifact name
         run: echo "::set-env name=ARTIFACT_X64::$(echo "${{ env.APP_NAME }}-win-x64-${{ env.APP_VERSION }}-${{ env.HASH }}.exe")"
@@ -286,7 +287,7 @@ jobs:
         id: build
         run: |
           echo "Building $APP_VERSION-$HASH"
-          ./node_modules/.bin/gulp build --macos
+          npm run build
 
       - name: bundle macOS
         run: ./node_modules/.bin/gulp release-macos --out=../artifacts/$ARTIFACT_NAME
