--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
   "main": "main.js",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "build": "npm run react-build && copyfiles package.json build/ && npm run electron-build",
+    "prebuild": "npm run remove-build-folders && npm run react-build && npm run build-main && copyfiles package.json build/",
+    "build": "npm run electron-build",
+    "build-win": "npm run prebuild && npm run electron-build-win",
     "electron-start": "electron .",
-    "electron-build": "electron-packager ./build --out=dist",
+    "electron-build": "electron-packager ./build --out=dist --icon=src/images/icon.icns",
+    "electron-build-win": "electron-packager ./build --out=dist --arch=all --icon=src/images/icon.ico",
     "react-start": "craco start",
     "react-build": "craco build",
+    "build-main": "webpack --config electron/webpack.config.js",
+    "remove-build-folders": "rm -rf dist && rm -rf build",
     "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test-one": "craco test",
     "test": "eslint ./src && craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
-    "ci-test": "eslint ./src && craco test --max-old-space-size=3072 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage --coverage",
+    "ci-test": "eslint ./src && craco test --max-old-space-size=8192 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage --coverage",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
@@ -51,10 +56,7 @@
   "bugs": {
     "url": "https://github.com/unfoldingWord-dev/translationCore/issues"
   },
-  "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
+  "homepage": "./",
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -69,10 +71,11 @@
     "@types/node": "13.7.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
-    "babel-loader": "8.0.6",
+    "babel-loader": "8.1.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "concurrently": "5.1.0",
+    "copy-webpack-plugin": "5.1.1",
     "copyfiles": "2.2.0",
     "cross-env": "7.0.2",
     "css-loader": "3.4.2",
@@ -82,9 +85,10 @@
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
     "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-prettier": "3.1.2",
     "fetch-mock": "5.13.1",
+    "file-loader": "6.0.0",
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
@@ -99,11 +103,12 @@
     "request-promise": "4.2.2",
     "source-map-explorer": "2.2.2",
     "spec-xunit-file": "0.0.1-3",
-    "style-loader": "^1.1.3",
+    "style-loader": "1.1.3",
     "taffydb": "2.7.3",
     "temp": "0.8.3",
     "typescript": "3.7.5",
     "wait-on": "4.0.0",
+    "webpack-cli": "3.3.11",
     "yargs": "10.0.3"
   },
   "dependencies": {
@@ -116,6 +121,7 @@
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
+    "babel-polyfill": "6.26.0",
     "checking-tool-wrapper": "4.0.4",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
@@ -148,7 +154,7 @@
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.1",
     "react-select": "1.2.0",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
@@ -168,10 +174,10 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
+    "tc-electron-env": "0.9.0",
     "tc-source-content-updater": "0.6.18",
     "tc-strings": "0.1.7",
     "tc-tool": "4.0.1",
-    "tc-electron-env": "0.9.0",
     "tc-ui-toolkit": "1.0.1",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.15",
