Fixed wrong repo url

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/klappy/translationCore.git"
+    "url": "git+https://github.com/unfoldingWord/translationCore"
   },
   "keywords": [
     "Translation",
