updating string-punctuation-tokenizer and modules that depend on it.

--- a/package.json
+++ b/package.json
@@ -184,19 +184,19 @@
     "selections": "0.1.7",
     "semver": "5.5.0",
     "simple-git": "1.43.0",
-    "string-punctuation-tokenizer": "0.9.4",
+    "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
     "tc-source-content-updater": "0.6.17",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
     "tc-ui-toolkit": "0.15.8",
     "truncate-utf8-bytes": "1.0.2",
-    "tsv-groupdata-parser": "0.9.15",
+    "tsv-groupdata-parser": "0.9.16-beta",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.15",
+    "word-aligner": "0.2.16-beta",
     "wordmap": "0.4.3",
-    "wordmap-lexer": "0.3.5",
+    "wordmap-lexer": "0.3.6-beta",
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
