--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "checking-tool-wrapper": "1.0.11",
+    "checking-tool-wrapper": "1.1.0-beta.2",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -186,15 +186,15 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "0.6.17",
+    "tc-source-content-updater": "0.7.0-beta",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
-    "tc-ui-toolkit": "0.15.8",
+    "tc-ui-toolkit": "0.16.0-beta.2",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16-beta",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.16-beta",
+    "word-aligner": "0.3.0-beta",
     "wordmap": "0.4.3",
     "wordmap-lexer": "0.3.6-beta",
     "xregexp": "3.2.0",
