--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "translationCore",
   "productName": "translationCore",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "minCompatibleVersion": "2.1.0",
   "manifestVersion": "7",
   "description": "A bridge between TS and TM",
@@ -186,12 +186,12 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "0.7.0-beta",
+    "tc-source-content-updater": "github:unfoldingWord/tc-source-content-updater#bugfix-mcleanb-6831",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
     "tc-ui-toolkit": "0.16.0-beta.2",
     "truncate-utf8-bytes": "1.0.2",
-    "tsv-groupdata-parser": "0.9.16-beta",
+    "tsv-groupdata-parser": "github:unfoldingWord/tsv-groupdata-parser#bugfix-mcleanb-6831",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
     "word-aligner": "0.3.0-beta",
