--- a/package.json
+++ b/package.json
@@ -186,17 +186,17 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "github:unfoldingWord/tc-source-content-updater#bugfix-mcleanb-6831",
+    "tc-source-content-updater": "0.6.17-build.2",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
     "tc-ui-toolkit": "0.16.0-beta.2",
     "truncate-utf8-bytes": "1.0.2",
-    "tsv-groupdata-parser": "github:unfoldingWord/tsv-groupdata-parser#bugfix-mcleanb-6831",
+    "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
-    "word-aligner": "0.3.0-beta",
+    "word-aligner": "0.3.0",
     "wordmap": "0.4.3",
-    "wordmap-lexer": "0.3.6-beta",
+    "wordmap-lexer": "0.3.6",
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
