--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test-one": "craco test",
     "test": "eslint ./src && craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
     "ci-test": "eslint ./src && craco test --max-old-space-size=8192 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage --coverage",
+    "doc": "jsdoc -c jsdoc/jsdoc.json",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
@@ -87,6 +88,7 @@
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
+    "jsdoc": "3.6.3",
     "ncp": "2.0.0",
     "prettier": "2.0.1",
     "react-addons-test-utils": "15.6.2",
@@ -116,7 +118,7 @@
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
-    "checking-tool-wrapper": "4.0.4",
+    "checking-tool-wrapper": "4.0.5-alpha",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
