--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prebuild": "npm run remove-build-folders && npm run react-build && npm run build-main",
     "build": "npm run electron-build",
     "build-win": "npm run prebuild && npm run electron-build-win",
-    "electron-start": "electron .",
+    "electron-start": "electron . ",
+    "electron-start-logging": "electron . --enable-logging",
     "electron-build": "electron-packager ./build --out=dist --icon=src/images/icon.icns",
     "electron-build-win": "electron-packager ./build --out=dist --arch=all --icon=src/images/icon.ico",
     "react-start": "craco start",
@@ -74,7 +75,7 @@
     "cross-env": "7.0.2",
     "css-loader": "3.4.2",
     "electron": "6.0.7",
-    "electron-devtools-installer": "2.2.4",
+    "electron-devtools-installer": "3.0.0",
     "electron-packager": "14.2.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
@@ -170,7 +171,7 @@
     "tc-electron-env": "0.9.0",
     "tc-source-content-updater": "0.6.18",
     "tc-strings": "0.1.7",
-    "tc-tool": "4.0.1",
+    "tc-tool": "github:unfoldingWord/tc-tool#bugfix-mannycolon-6830",
     "tc-ui-toolkit": "1.0.1",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.15",
