--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "main.js",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "prebuild": "npm run remove-build-folders && npm run react-build && npm run build-main",
+    "update-env": "node ./scripts/update_env.js",
+    "prebuild": "npm run update-env && npm run remove-build-folders && npm run react-build && npm run build-main",
     "build": "npm run electron-build",
     "build-win": "npm run prebuild && npm run electron-build-win",
     "electron-start": "electron . ",
@@ -19,6 +20,7 @@
     "react-build": "craco build",
     "build-main": "webpack --config electron/webpack.config.js",
     "remove-build-folders": "rm -rf dist && rm -rf build",
+    "prestart": "npm run update-env",
     "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "lint": "eslint ./src",
