--- a/package.json
+++ b/package.json
@@ -170,20 +170,20 @@
     "selections": "0.1.7",
     "semver": "5.5.0",
     "simple-git": "1.43.0",
-    "string-punctuation-tokenizer": "0.9.4",
+    "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
     "tc-electron-env": "0.9.0",
-    "tc-source-content-updater": "0.6.18",
+    "tc-source-content-updater": "0.6.19-alpha",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
     "tc-ui-toolkit": "1.1.2",
     "truncate-utf8-bytes": "1.0.2",
-    "tsv-groupdata-parser": "0.9.15",
+    "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.15",
+    "word-aligner": "0.3.0",
     "wordmap": "0.8.2",
-    "wordmap-lexer": "0.3.5",
+    "wordmap-lexer": "0.3.6",
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
