--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
-    "checking-tool-wrapper": "4.0.6",
+    "checking-tool-wrapper": "4.0.7-alpha",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -176,7 +176,7 @@
     "tc-source-content-updater": "0.6.19-alpha",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
-    "tc-ui-toolkit": "1.1.2",
+    "tc-ui-toolkit": "1.1.3-alpha",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.0.2",
