--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "@neutrinog/electron-dl": "1.11.1",
     "@sendgrid/mail": "6.4.0",
     "adm-zip": "0.4.13",
-    "agentkeepalive": "4.0.0",
+    "agentkeepalive": "4.1.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
@@ -173,7 +173,7 @@
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
     "tc-electron-env": "0.9.0",
-    "tc-source-content-updater": "0.6.19-alpha",
+    "tc-source-content-updater": "0.6.19-alpha.6",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
     "tc-ui-toolkit": "1.1.3-alpha",
