--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
-    "checking-tool-wrapper": "4.0.7-alpha",
+    "checking-tool-wrapper": "4.0.7",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -173,10 +173,10 @@
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
     "tc-electron-env": "0.9.0",
-    "tc-source-content-updater": "0.6.19-alpha.6",
+    "tc-source-content-updater": "0.6.19",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
-    "tc-ui-toolkit": "1.1.3-alpha",
+    "tc-ui-toolkit": "1.1.3",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.0.2",
