--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "update-env": "node ./scripts/update_env.js",
     "prebuild": "npm run update-env && npm run remove-build-folders && npm run react-build && npm run build-main",
-    "build": "npm run electron-build",
-    "build-win": "npm run prebuild && npm run electron-build-win",
-    "electron-start": "electron . ",
-    "electron-start-logging": "electron . --enable-logging",
-    "electron-build": "electron-packager ./build --out=dist --icon=src/images/icon.icns",
-    "electron-build-win": "electron-packager ./build --out=dist --arch=all --icon=src/images/icon.ico",
+    "build": "npm run electronite-build",
+    "build-win": "npm run prebuild && npm run electronite-build-win",
+    "electronite-start": "electronite . ",
+    "electronite-start-logging": "electronite . --enable-logging",
+    "electronite-build": "electronite-packager ./build --out=dist --icon=src/images/icon.icns",
+    "electronite-build-win": "electronite-packager ./build --out=dist --arch=all --icon=src/images/icon.ico",
     "react-start": "craco start",
     "react-build": "craco build",
-    "build-main": "webpack --config electron/webpack.config.js",
+    "build-main": "webpack --config electronite/webpack.config.js",
     "remove-build-folders": "rm -rf dist && rm -rf build",
     "prestart": "npm run update-env",
-    "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
+    "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electronite-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
@@ -77,9 +77,9 @@
     "copy-webpack-plugin": "5.1.1",
     "cross-env": "7.0.2",
     "css-loader": "3.4.2",
-    "electron": "6.0.7",
     "electron-devtools-installer": "3.0.0",
-    "electron-packager": "14.2.0",
+    "electronite": "^7.2.1-graphite",
+    "electronite-packager": "^15.0.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
     "enzyme-to-json": "3.3.5",
