--- a/package.json
+++ b/package.json
@@ -188,5 +188,9 @@
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
+  },
+  "engines": {
+    "node": ">=12.16.3",
+    "npm": ">=6.14.4"
   }
 }
