--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
-    "checking-tool-wrapper": "4.0.11",
+    "checking-tool-wrapper": "4.0.11-beta.2",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -177,7 +177,7 @@
     "tc-source-content-updater": "0.6.19",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
-    "tc-ui-toolkit": "1.1.5",
+    "tc-ui-toolkit": "1.1.5-beta.2",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.0.2",
