--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "tc-source-content-updater": "0.6.19",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
-    "tc-ui-toolkit": "1.2.0",
+    "tc-ui-toolkit": "github:unfoldingWord/tc-ui-toolkit#feature-mcleanb-5194",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.0.2",
