--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
-    "checking-tool-wrapper": "4.7.0",
+    "checking-tool-wrapper": "4.7.1-alpha.2",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -174,15 +174,15 @@
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
     "tc-electron-env": "0.9.0",
-    "tc-source-content-updater": "0.6.19",
+    "tc-source-content-updater": "0.6.20-alpha",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
-    "tc-ui-toolkit": "2.1.0",
+    "tc-ui-toolkit": "2.1.1-alpha.2",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16",
-    "usfm-js": "2.0.2",
+    "usfm-js": "2.0.4-alpha",
     "uuid": "3.2.1",
-    "word-aligner": "0.3.0",
+    "word-aligner": "0.4.0-alpha.2",
     "wordmap": "0.8.2",
     "wordmap-lexer": "0.3.6",
     "xregexp": "3.2.0",
