--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "archiver": "3.0.0",
     "axios": "0.19.1",
     "babel-polyfill": "6.26.0",
-    "checking-tool-wrapper": "4.9.1-alpha",
+    "checking-tool-wrapper": "4.9.1",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -174,7 +174,7 @@
     "string-punctuation-tokenizer": "2.0.0",
     "sudo-prompt": "6.2.1",
     "tc-electron-env": "0.9.0",
-    "tc-source-content-updater": "0.6.20-alpha",
+    "tc-source-content-updater": "0.6.20",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
     "tc-ui-toolkit": "3.0.1",
