--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "tc-source-content-updater": "0.6.20",
     "tc-strings": "0.1.7",
     "tc-tool": "4.1.0",
-    "tc-ui-toolkit": "3.0.2",
+    "tc-ui-toolkit": "3.0.3-alpha",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.1.0",
