--- a/package.json
+++ b/package.json
@@ -182,7 +182,7 @@
     "tsv-groupdata-parser": "0.9.16",
     "usfm-js": "2.1.0",
     "uuid": "3.2.1",
-    "word-aligner": "0.4.0",
+    "word-aligner": "0.4.1-alpha",
     "wordmap": "0.8.2",
     "wordmap-lexer": "0.3.6",
     "xregexp": "3.2.0",
